# oat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  oat.code-workspace
cmake/: config.h.in  inc.cmake
docs/: README.md
include/container/: bidirect_unordered_map.h  fixed_piority_map.h  fixed_priority_map.h  indexed_vector.h
include/oat/relay/: expr_functor.h
include/tvm/relay/onnx/: printer.h
scripts/: build.sh  cpp_test.sh  env.source  run.sh  set_up.md  submodule_update.sh
scripts/task/: pack_onnx.sh
src/relay/: expr_functor.cc  ir.cc
src/relay/onnx/: loader.cc  printer.cc
tests/cpp/: CMakeLists.txt  test_priority_queue.cc
tests/cpp/onnx/: onnx_printer_test.cc
tests/util/: container_test.cc
